# dot

./: .gitignore  .licenserc.yaml  CODEOWNERS  Cargo.toml  Makefile  README.md  TODO.md  backup-system.sh  install-linux.sh  install-mac.sh  installMac.bash  installMac.sh
Linux/: .zshrc  i3status.conf  install.sh
Linux/.config/: Trolltech.conf
Linux/System/: compton.conf  gitconfig  zshrc
Linux/i3/: config
Linux/polybar/: config  launch.sh  weathericons
Mac/: installMac.sh
Mac/files/: zshrc
Mac/terminal/: init.vim
backgrounds/: Bermuda.HEIC
common/elisp/: functions.el  general.el  keybindings.el  lsp.el
common/zsh/: alias.zsh
configs/: linux.zshrc  macos.init.el  macos.zshrc
configs/elisp/: README.txt  functions.el  general.el  keybindings.el  lsp.el  orgconf.el  styling.el
configs/git/: README.txt  aliases.gitconfig  general.gitconfig  ggh.gitconfig  global.gitignore
configs/links/: README.txt  alacritty.yaml
configs/macos/: .zshrc  init.el
configs/zsh/: README.txt  _vars.zsh  alias.zsh  config.zsh  (+5 more)
emacs/: init.el
i3/: config
iTerm2/: com.googlecode.iterm2.plist
install_scripts/: mac.sh
linux/: .zshrc  alacritty.yml  init.el
macos/: .zshrc  .zshrc-e  init.el
polybar/: colors.ini  config.ini  launch.sh  modules.ini
rofi/: config.rasi
scripts/: common-lib.sh
src/: #install.rs#  .#install.rs  common.rs  install.rs  main.rs  preinstall.rs
static/: iterm-profile.json  personal.itermcolors
templates/: gitconfig.tmpl  init.el.tmpl  zshrc.tmpl
terminal/: kitty.conf
vim/: init.vim
zsh/: linux.zshrc  mac.zshrc  zshrc
(+532 files in other folders)
