[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"
authors = ["Bryce Thuilot <bryce@thuilot.io>"]
license = "GPL-3"
description = "installs and configures my personal dotfiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
